quitado cosas inútiles del código, falta mejorar filtro

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <!-- NAVBAR CON EL LOGRO DE LA POKÉDEX Y CON EL LISTADO DE TIPOS DE POKEMON PARA PODER FILTRAR -->
       <nav class="nav">
-        <img src="./utils/img/Pokédex_logo.png" alt="Logo Pokédex" id="logo_pokedex">
+        <img src="./utils/img/logo_pokedex_2.png" alt="Logo Pokédex" id="logo_pokedex">
         <ul class="nav-list">
           <li class="nav-item">
             <button class="btn-header" id="all">Catch 'em all</button>
